# rosbag-extractor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  extract_video.py  info.py  pyproject.toml
configs/: video.yaml
rosbag_extractor/: __init__.py  extract_video.py  info.py
